examples/misc/error/compilation/eval_unexpected-non-index.bfr
let main = [
  $build {
    a: array(3) { x: cell }
  }
  > a@x
]